<resources>
    <string name="app_name">Count</string>

    <string name="high_score">9999</string>
    <string name="time_counter">00:30</string>
    <string name="timer_mode">Timer</string>
    <string name="Infinity_mode">Infinity</string>
    <string name="current_score">101</string>
    <string name="backward_mode">Backward</string>
    <string name="timer_info">Time</string>
    <string name="high_score_info">Best</string>
    <string name="high_score_shared_pref">highScoreSharedPref</string>
    <string name="game_over_dialog_title">Game Over :(</string>
    <string name="your_score_title">Your Score:</string>
    <string name="your_score">%s</string>
    <string name="resume_button">Resume</string>
    <string name="return_to_menu">Main Menu</string>
    <string name="new_high_score">New High Score</string>
    <string name="game_explain_hit_tile">Press on the tile</string>
    <string name="game_explain_asc">Hit the tiles on ascending order</string>
    <string name="game_explain_dont_confuse">Stay focused! Some tiles might confuse you!</string>
</resources>
