<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_gradient_start"
    android:orientation="vertical">

    <TextView
        style="@style/Headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_over_dialog_title"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/your_score_title"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/your_game_score_TV"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/your_score"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/high_score_info"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/high_score_game_over_TV"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/your_score"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:paddingHorizontal="10dp"
            style="@style/Buttons"
            android:backgroundTint="@color/menuYellow"
            android:background="@drawable/start_button_style"
            android:id="@+id/try_again_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:text="@string/try_again"
            android:textAllCaps="false" />

        <Button
            android:paddingHorizontal="10dp"
            style="@style/Buttons"
            android:background="@drawable/start_button_style"
            android:backgroundTint="@color/menuRed"
            android:id="@+id/return_to_menu_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:text="@string/return_to_menu"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>