<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gradient_start"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_to_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_pause_black_24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timer_infoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:fontFamily="@font/poiret_family"
                android:text="@string/timer_info"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Chronometer
                android:id="@+id/timerTV"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poiret_family"
                android:text="@string/time_counter"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/current_scoreTV"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="4"
            android:fontFamily="@font/poiret_family"
            android:gravity="center"
            android:text="@string/current_score"
            android:textColor="@color/Gold"
            android:textSize="40sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/high_score_infoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:fontFamily="@font/poiret_family"
                android:text="@string/high_score_info"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pointsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poiret_family"
                android:text="@string/high_score"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout_for_fragments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">


    </FrameLayout>


</LinearLayout>