<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gradient_start"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/relative_layout_for_mode_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/AppName"
            android:id="@+id/appNameText"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/timer_mode_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/start_button_style"
                android:backgroundTint="@color/menuRed"
                android:enabled="false"
                android:fontFamily="@font/poiret_family"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/timer_mode"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/infinity_mode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/start_button_style"
                android:backgroundTint="@color/menuYellow"
                android:fontFamily="@font/poiret_family"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/Infinity_mode"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infinity_mode_button"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/poiret_family"
                android:gravity="center"
                android:text="no ads"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/mute_sounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/settings_button_style"
                android:fontFamily="@font/poiret_family"
                android:gravity="center"
                android:src="@drawable/ic_volume_up_black_24dp"
                android:tag="1" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>